Fixed overflow lists

--- a/src/front/styles/pages/todo-list.scss
+++ b/src/front/styles/pages/todo-list.scss
@@ -41,7 +41,7 @@
         width: 100%;
         max-height: 68vh;
         font-size: 1.2rem;
-        overflow-y: scroll;
+        overflow-y: auto;
 
         li {
             display: flex;
